--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,13 @@
     box-sizing: border-box;
 }
 
+img {
+    max-width: 25%;
+}
+
 body {
     font-family: 'Fredoka', sans-serif;
+    /* background-color: blue; */
 }
 
 .container {
@@ -19,10 +24,39 @@ h1 {
     font-size: 2.5rem;
     margin-top: 40px;
     text-align: center;
+    color: #e53170;
 }
 /* MAIN  */
-p {
-    padding-top: 60px;
+.h-text {
+    padding-top: 40px;
     font-size: 1.5rem;
     text-align: center;
+    margin-bottom: 40px;
+}
+/* p,
+h3{
+    display: inline-block;
+} */
+.col {
+    float: left;
+    width: calc(100% / 3);
+    padding: 20px 15px;
+    color: white;
+    /* Debug */
+    border: 1px solid white;
+    /* height: 200px; */
+}
+
+.mail {
+    color: #018ad8;
+}
+
+.card {
+    background-color: #0f0e17;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
