--- a/css/style.css
+++ b/css/style.css
@@ -33,18 +33,21 @@ h1 {
     text-align: center;
     margin-bottom: 40px;
 }
-/* p,
-h3{
-    display: inline-block;
-} */
+/* COLUMN AND IMG  */
 .col {
     float: left;
     width: calc(100% / 3);
     padding: 20px 15px;
     color: white;
+    display: inline-block;
     /* Debug */
-    border: 1px solid white;
+    /* border: 1px solid white; */
     /* height: 200px; */
+}
+
+.col img {
+    float: left;
+    margin-right: 10px;
 }
 
 .mail {
@@ -59,4 +62,11 @@ h3{
     content: "";
     clear: both;
     display: table;
+}
+h3,
+p {
+    margin-bottom: 5px;
+}
+.content {
+   padding-top: 10px;
 }
